# business

./: .bak_gitlab-ci.yml  .gitignore  CMakeLists.txt  README.md  build.properties  start.sh  xbusiness.conf.tpl
Depend/include/librdkafka/: rdkafka.h  rdkafkacpp.h
Depend/lib/: librdkafka++.so.1
ci/xbusiness/: start.sh
conf/: xbusiness.conf  xbusiness.conf.tpl
include/: server_version.h
include/common/: ThreadSAP.h  com_func.h  com_kafka.h  com_xservice.h  kafka_consumer_imp.h  kafka_consumer_imp_cb.h  lrucache.h  timer.h
include/common/mongo/: mongo_client_pool.h
include/common/redis/: RedisClient.h  RedisDefine.h  RedisFactory.h  RedisSubscriber.h
include/data/: base_data.h  business_data.h  capture_data.h  parse_data_factory.h  screenshot_data.h  xiashun_business_data.h  xiashun_capture_data.h
include/frame/: client_http.h  client_https.h  crypto.h  server_http.h  server_https.h  status_code.h  utility.h
include/handler/: base_handler.h  business_capture_handler.h  common_capture_handler.h  handler_include.h  passenger_flow_handler.h  pre_handler.h
include/log/: log_module.h
include/message/: session.h  xperf.h
include/package/conf/: conf_manager.h
include/package/consumer/: ConsumeProcess.h  DataDefine.h  MsgConsumer.h  PartitionManager.h  XBusinessHandler.h
include/package/transponder/: transponder.h
include/package/workflow/: flow_manager.h  http_module_wrapper.h  module_define.h  module_factory.h  module_wrapper.h  worker.hpp
include/package/workflow/module/: module_business_output.h  module_doc_update.h  module_download.h  module_feature_extract.h  module_feature_search.h  module_feature_search_static.h  module_generate_url.h  module_get_plugin.h  module_kafka_output.h  module_person_regist.h  module_picture_waiting.h  module_task_handle.h  module_trace_output.h  module_trace_space.h
proto/: xbusiness_api.proto  xbusiness_type.proto
scm/project/: Jenkinsfile  Jenkinsfile_jump  build.yaml  upload.yaml
src/common/: ThreadSAP.cpp  com_func.cpp  kafka_consumer_imp.cpp  kafka_consumer_imp_cb.cpp
src/common/mongo/: mongo_client_pool.cpp
src/common/redis/: RedisClient.cpp  RedisSubscriber.cpp
src/data/: base_data.cpp  business_data.cpp  capture_data.cpp  screenshot_data.cpp  xiashun_business_data.cpp  xiashun_capture_data.cpp
src/handler/: business_capture_handler.cpp  common_capture_handler.cpp  common_capture_handler_http_request.cpp  common_capture_handler_http_response.cpp  passenger_flow_handler.cpp  pre_handler.cpp  pre_handler_http_request.cpp  pre_handler_http_response.cpp
src/log/: log_module.cpp
src/message/: session.cpp
src/package/conf/: conf_manager.cpp
src/package/consumer/: ConsumeProcess.cpp  MsgConsumer.cpp  PartitionManager.cpp  XBusinessHandler.cpp
src/package/workflow/: flow_manager.cpp  http_module_wrapper.cpp  module_factory.cpp
src/package/workflow/module/: module_business_output.cpp  module_download.cpp  module_feature_extract.cpp  module_feature_search.cpp  module_feature_search_static.cpp  module_generate_url.cpp  module_get_plugin.cpp  module_kafka_output.cpp  module_person_regist.cpp  module_picture_waiting.cpp  module_task_handle.cpp  module_trace_output.cpp  module_trace_space.cpp
src/service/: main.cpp
tools/kafkaMsgCommit/: update_conf.sh
tools/kafkaMsgCommit/conf/: log.conf  xbusiness.conf
tools/sendPkg2Kafka/: aaaa  bbbb  build.sh  data-msg1.json  data-msg2.json  data.json  kafkaProducer.cpp  kafkaProducer.h  kafkaProducerImp.cpp  kafkaProducerImp.h  kafka_constant.h  loopsend.sh  main.cpp  monitot_p  record.txt  sendKafkaPkg  send_msg.sh  xiashun_business.json
tools/sendPkg2Kafka/test_case/: data-3_images.json  data-featureset-is-null.json  data-match-static.json  data-no_bucket.json  data-no_endpoint.json  data-no_image.json  data-no_payload.json  data-no_task.json  data-no_url.json  data-ptype1.json  data-ptype32-redis.json  data-ptype32-unmatch.json  data-ptype32.json  data-redis.json  data-staticset-null.json  data-unmatch.json  data-wrong_bucket.json  data-wrong_endpoint.json  data-wrong_image.json  data-wrong_ptype0.json
